2003-12-10  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/language-specs/csharp.lang: Support for C#
	highlighting (file from John Luke, bug 115040).
	
	* gtksourceview/language-specs/msil.lang: MSIL hightlighting spec
	(file from Antonio Ognio Cesti, bug 125252).
	
	* gtksourceview/language-specs/Makefile.am: Distribute csharp.lang
	and msil.lang.

2003-12-09  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* configure.in: Updated required Gtk+ version tu use the new
	GtkFileChooser.

2003-12-06  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* tests/test-widget.c: (file_selected_cb), (open_file_cb): Replace
	GtkFileSelection with GtkFileChooser.

2003-12-03  Sanlig Badral  <badral@openmn.org>

	* configure.in: Added "mn" to ALL_LINGUAS

2003-12-01	Mohammad DAMT  <mdamt@bisnisweb.com>

	* configure.in: Added "id" to ALL_LINGUAS
	* po/id.po: Added Indonesian translation by Ahmad Riza H Nst <ari@160c.afraid.org>

2003-11-10  Žygimantas Beručka  <uid0@tuxfamily.org>

	* configure.in: Added "lt" to ALL_LINGUAS.

2003-10-22  Paolo Maggi  <paolo.maggi@polito.it>

	* TODO: Updated

	* gtksourceview/language-specs/sql.lang: new file

	* gtksourceview/language-specs/Makefile.am: distribute sql.lang

=== gtksourceview 0.7.0 ===

2003-10-17  Maxim Dziumanenko  <mdziumanenko@cvs.gnome.org>

	* configure.in:  Added "uk" to ALL_LINGUAS.

2003-10-15  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* configure.in
	* README
	* NEWS: Updated for new stable release

2003-10-10  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourcebuffer.c (get_syntax_start): Use the
	ending index (not offset) to specify the text length when calling
	gtk_source_regex_match().

2003-10-03  Paolo Maggi  <paolo.maggi@polito.it>

	* tests/Makefile.am (INCLUDES): remove GTK_DISABLE_DEPRECATED for
	now until we're ported to GtkUIManager.

	* gtksourceview/gtksourcebuffer.c (gtk_source_buffer_constructor):
	change g_value_set_object_take_ownership to g_value_take_object to