@@ -102,6 +102,7 @@ gtksourceview/gnu-regex/Makefile
 gtksourceview/language-specs/Makefile
 docs/Makefile
 docs/reference/Makefile
+docs/reference/version.xml
 tests/Makefile
 ])
 
