@@ -13,4 +13,5 @@ gtksourceview.hierarchy
 gtksourceview.signals
 gtksourceview.interfaces
 gtksourceview.prerequisites
+version.xml
 
