@@ -1,9 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
-               "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+               "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+<!ENTITY version SYSTEM "version.xml">
+]>
 <book id="index" xmlns:xi="http://www.w3.org/2001/XInclude">
   <bookinfo>
     <title>GtkSourceView Reference Manual</title>
+    <releaseinfo>for GtkSourceView &version;</releaseinfo>
   </bookinfo>
 
   <section>
